--- a/kanjax_popup.css
+++ b/kanjax_popup.css
@@ -7,6 +7,12 @@
   border-radius: 0.8em;
   text-align: center;
 }
+#kanjax_popup input{
+  font-weight: inherit;
+  font-family: inherit;
+  font-style:  inherit;
+  font-size:   80%;
+}
 #kanjax_popup #strokes {
 	max-width: 700px;
 	max-height: 100px;
