experimental furigana addition

--- a/kanjax/kanjax.css
+++ b/kanjax/kanjax.css
@@ -10,3 +10,10 @@ a .kanjax {
   color: #a000a0 !important;
   cursor: pointer;
 }
+.kjruby {
+    display: inline-block !important;
+}
+.kjrt {
+    display: block !important;
+    font-size: 70%;
+}
