--- a/kanjax/kanjax.css
+++ b/kanjax/kanjax.css
@@ -1,20 +1,27 @@
 .kanjax {
-    color: #c00000 !important;
-    padding: 0px !important;
-    border: none !important;
+    color:     #c00000 !important;
+    padding:   0px     !important;
+    border:    none    !important;
     background-image: none !important;
-    display: inline !important;
-    cursor: pointer;
+    display:   inline  !important;
+    cursor:    pointer !important;
 }
 a .kanjax {
-    color: #a000a0 !important;
-    cursor: pointer;
+    color: #a000a0  !important;
+    cursor: pointer !important;
+}
+.kanjax_lemma {
+    /*display:          inline-block !important;
+    text-align:       center;*/
+    cursor:           pointer !important;
+    border-radius:    5px     !important;
+    padding:          1px     !important;
 }
 .kanjax_lemma:hover {
-    background-color: white;    
+    background-color: #ffffa0 !important;
 }
 .kanjax_ruby {
-    text-align: center !important;
+    text-align: center    !important;
     display: inline-block !important;
 }
 .kanjax_rt {
@@ -24,3 +31,129 @@ a .kanjax {
     line-height: 0.9em;
 }
 rt, rp { font-size: 65%; }
+
+.kanjax_lemma .mytooltip {
+    display: none;
+    position: absolute;
+    background: #000;
+    color: #ffa;
+    padding: 4px 8px;
+    font-size: 14px;
+    line-height: 1.4;
+    min-width: 50px;
+    /* text-align: center; */
+    border-radius: 4px;
+    z-index: 50;
+
+    left: ;
+    -ms-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+.kanjax_lemma:hover .mytooltip {
+    display: block;
+}
+[data-qooltip] {
+    /*display: inline-block;*/
+    position: relative;
+    cursor:   help;
+    /* padding: 4px; */
+}
+/* Tooltip styling */
+[data-qooltip]:before {
+    content: '<a>' attr(data-qooltip) '</a>';
+    display: none;
+    position: absolute;
+    background: #000;
+    color: #ffa;
+    padding: 4px 8px;
+    font-size: 14px;
+    line-height: 1.4;
+    min-width: 50px;
+    text-align: center;
+    border-radius: 4px;
+}
+/* Dynamic horizontal centering */
+[data-qooltip_position="top"]:before,
+[data-qooltip_position="bottom"]:before {
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+/* Dynamic vertical centering */
+[data-qooltip_position="right"]:before,
+[data-qooltip_position="left"]:before {
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+[data-qooltip_position="top"]:before {
+    bottom: 100%;
+    margin-bottom: 3px;
+}
+[data-qooltip_position="right"]:before {
+    left: 100%;
+    margin-left: 3px;
+}
+[data-qooltip_position="bottom"]:before {
+    top: 100%;
+    margin-top: 3px;
+}
+[data-qooltip_position="left"]:before {
+    right: 100%;
+    margin-right: 3px;
+}
+
+/* Tooltip arrow styling/placement */
+[data-qooltip]:after {
+    content: '';
+    display: none;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+}
+/* Dynamic horizontal centering for the tooltip */
+[data-qooltip_position="top"]:after,
+[data-qooltip_position="bottom"]:after {
+    left: 50%;
+    margin-left: -6px;
+}
+/* Dynamic vertical centering for the tooltip */
+[data-qooltip_position="right"]:after,
+[data-qooltip_position="left"]:after {
+    top: 50%;
+    margin-top: -6px;
+}
+[data-qooltip_position="top"]:after {
+    bottom: 100%;
+    border-width: 6px 6px 0;
+    border-top-color: #000;
+}
+[data-qooltip_position="right"]:after {
+    left: 100%;
+    border-width: 6px 6px 6px 0;
+    border-right-color: #000;
+}
+[data-qooltip_position="bottom"]:after {
+    top: 100%;
+    border-width: 0 6px 6px;
+    border-bottom-color: #000;
+}
+[data-qooltip_position="left"]:after {
+    right: 100%;
+    border-width: 6px 0 6px 6px;
+    border-left-color: #000;
+}
+/* Show the tooltip when hovering */
+[data-qooltip]:hover:before,
+[data-qooltip]:hover:after {
+    display: block;
+    z-index: 50;
+}
