--- a/kanjax/kanjax.css
+++ b/kanjax/kanjax.css
@@ -37,7 +37,7 @@ rt, rp { font-size: 65%; }
     cursor:   help;
 }
 [data-lemma]:before {
-    content:    attr(data-lemma);
+    content:    attr(data-lemma) ' ' attr(data-pos);
     display:    none;
     position:   absolute;
     background: #058;
@@ -49,7 +49,7 @@ rt, rp { font-size: 65%; }
     min-width:  100%;
     text-align: center;
     border-radius: 6px;
-    
+
     left:          50%;
     -ms-transform:  translateX(-50%);
     -moz-transform: translateX(-50%);
@@ -87,10 +87,11 @@ rt, rp { font-size: 65%; }
     position:   absolute;
     background: #085;
     color:      #ffa;
-    padding:    4px 6px;
+    padding:    2px 4px;
     font-size:  14px;
     line-height: 1.4;
-    min-width:  50px;
+    /*min-width:  50px;*/
+    font-size:  130%;
     text-align: center;
     border-radius: 6px;
     
@@ -121,6 +122,7 @@ rt, rp { font-size: 65%; }
     display: block;
     z-index: 50;
 }
+
 
 [data-tooltip] {
     position: relative;
