--- a/kanjax/kanjax_popup.css
+++ b/kanjax/kanjax_popup.css
@@ -1,4 +1,4 @@
-#kanjax_popup {
+.kanji_popup, .error_popup {
   width:         640px;
   background-color: #e0e0ff;
   border:        1px solid #ffffff;
@@ -6,40 +6,82 @@
   border-radius: 17px;
   text-align:    center;
 }
-#kanjax_popup div, #kanjax_popup span, #kanjax_popup td {
+.kanji_popup div, .kanji_popup span, .kanji_popup td {
   cursor: default;
 }
-#kanjax_popup .editable:hover {
+.kanji_popup .editable:hover {
   background-color: white;
 }
-#kanjax_popup input{
+.kanji_popup input{
   font-weight: inherit;
   font-family: inherit;
   font-style:  inherit;
   font-size:   80%;
   word-break:  break-word;
 }
-#kanjax_popup #strokes {
+.kanji_popup #strokes {
   max-width: 640px;
   max-height: 85px;
 }
-#kanjax_popup #onyomi, #kanjax_popup #kunyomi {
+.kanji_popup #onyomi, .kanji_popup #kunyomi {
   font-style: normal;
 }
-#kanjax_popup #kanji {
+.kanji_popup #kanji {
   margin-right: 0.6em;
 }
-#kanjax_popup #keyword {
+.kanji_popup #keyword {
   margin-left: 0.6em;
 }
-#kanjax_popup #yomi, #kanjax_popup #strokes {
+.kanji_popup #yomi, .kanji_popup #strokes {
   margin-top: 0.2em;
   margin-bottom: 0.2em;
 }
-#kanjax_popup .japanese { font-family: "Kochi Mincho"; }
-#kanjax_popup .small {font-size: 15px;}
-#kanjax_popup .medium {font-size: 19px;}
-#kanjax_popup .large {font-size: 24px;}
-#kanjax_popup .huge {font-size: 40px;}
-#kanjax_popup .bold {font-weight: bold;}
-#kanjax_popup .italic {font-style: italic;}
+.kanji_popup .japanese { font-family: "Kochi Mincho"; }
+.kanji_popup .small {font-size: 15px;}
+.kanji_popup .medium {font-size: 19px;}
+.kanji_popup .large {font-size: 24px;}
+.kanji_popup .huge {font-size: 40px;}
+.kanji_popup .bold {font-weight: bold;}
+.kanji_popup .italic {font-style: italic;}
+
+.dict_popup {
+  max-height:    400px;
+  overflow:      auto;
+  width:         640px;
+  background-color: #e0e0ff;
+  border:        1px solid #ffffff;
+  padding:       12px;
+  border-radius: 17px;
+  text-align:    left;
+}
+.dict_popup .main {
+  font-size: 160%;
+}
+.dict_popup .othf {
+  color: #555;
+  font-size: 70%;
+}
+.dict_popup .pos {
+  color: #800;
+  font-size: 70%;
+  font-style: italic;
+  margin-top: 0.5em;
+  margin-left: -1.2em;
+}
+.dict_popup .misc {
+  color: #555;
+  font-size: 70%;
+}
+.dict_popup .refs {
+  color: #555;
+  font-size: 70%;
+}
+.dict_popup ol {
+  margin-top: 0.3em;
+}
+.dict_popup li {
+  color: #345;
+}
+.dict_popup li span {
+  color: black;
+}
