--- a/kanjax/kanjax_light.css
+++ b/kanjax/kanjax_light.css
@@ -1,34 +1,3 @@
-
-.kanjax_ruby {
-    text-align: center    !important;
-    /* fixes webkit flickering */
-    display: inline-block !important;
-}
-.kanjax_rt {
-    display: block !important;
-    font-size: 65%;
-    text-indent: 0px;
-    line-height: 0.9em;
-}
-ruby {
-    /* fixes webkit flickering */
-    display: inline-block !important;
-}
-rt {
-    /* fixes webkit flickering */
-    display: block !important;
-}
-rt {
-    font-size: 65%;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -ms-user-select: none;
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
-    user-select: none;
-    -webkit-text-size-adjust:0;
-}
-
 .kanjax {
     padding:   0px     !important;
     border:    none    !important;
@@ -84,7 +53,7 @@ rt {
     border-bottom-color: #085;
 }
 .kanjax_lemma {
-    padding:   0px     !important;
+    padding:   0px;    /* !important;*/
     border:    none    !important;
     background-image: none !important;
 
